# learn-tauri

./: README.md  RESOURCES.md  TOOLING.md
examples/tauri-react-starter/: README.md  index.html  package.json  vite.config.ts
examples/tauri-react-starter/src/: App.tsx
examples/tauri-react-starter/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-react-starter/src-tauri/capabilities/: default.json
examples/tauri-react-starter/src-tauri/src/: lib.rs  main.rs
examples/tauri-react-starter/src/components/: Layout.tsx
examples/tauri-react-starter/src/hooks/: useInvoke.ts
examples/tauri-react-starter/src/pages/: CounterPage.tsx  GreetPage.tsx  HomePage.tsx
examples/tauri-react-starter/src/styles/: globals.css
modules/01-rust-fundamentals/: README.md
modules/02-tauri-basics/: README.md
modules/03-react-integration/: README.md
modules/04-commands-and-state/: README.md
modules/05-windows-and-system-tray/: README.md
modules/06-filesystem-and-os/: README.md
modules/07-database-and-storage/: README.md
modules/08-ipc-and-events/: README.md
modules/09-plugins-and-ecosystem/: README.md
modules/10-security/: README.md
modules/11-testing-and-debugging/: README.md
modules/12-production/: README.md
